samples/task/valid/R14.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps-unordered><step><cmd/></step><stepsection><step><cmd/></step></stepsection></steps-unordered>
  </taskbody>
</task>