samples/task/invalid/R3.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <prolog/>
  <taskbody><steps><step><cmd/></step></steps></taskbody>
</task>